<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D6B657"
        android:gravity="center"
        android:text="@string/tt"
        android:textColor="#D5217D"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ht" />

        <EditText
            android:id="@+id/txtHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmnd" />

        <EditText
            android:id="@+id/txtCMND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D6B657"
        android:gravity="center"
        android:text="@string/bc"
        android:textColor="#D5217D"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radDH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dh" />

        <RadioButton
            android:id="@+id/radCD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cd" />

        <RadioButton
            android:id="@+id/radTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D6B657"
        android:gravity="center"
        android:text="@string/st"
        android:textColor="#D5217D"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game" />

        <CheckBox
            android:id="@+id/cbDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db" />

        <CheckBox
            android:id="@+id/cbDS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ds" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D6B657"
        android:gravity="center"
        android:text="@string/ttk"
        android:textColor="#D5217D"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTTK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnGTT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtt" />

    <EditText
        android:id="@+id/tvThongTin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

</LinearLayout>